--- a/src/app/modules/horarios-vista/horarios-vista.component.html
+++ b/src/app/modules/horarios-vista/horarios-vista.component.html
@@ -147,7 +147,7 @@
                          (click)="photoInput.click()"
                          width="10%"
                        />
-                        <button mat-menu-item (click)="show_option('up')"  style="border: none;background-color: #fd9727;border-radius: 5px;width: 100px;height: 30px;">
+                        <button mat-menu-item (click)="show_option('up')"  style="border: none;background-color: #e0e0df;border-radius: 5px;width: 100px;height: 30px;">
                            <span (click)="photoInput.click()">Subir imagen</span>
                         </button>
                      </div>
