--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -40,6 +40,12 @@
               <th mat-header-cell *matHeaderCellDef> Telefono </th>
               <td mat-cell *matCellDef="let empleados"> {{ empleados.telefono }} </td>
             </ng-container>
+
+            
+            <ng-container matColumnDef="puesto">
+              <th mat-header-cell *matHeaderCellDef> Rol </th>
+              <td mat-cell *matCellDef="let empleados"> {{ empleados.puesto }} </td>
+            </ng-container>
     
             <ng-container matColumnDef="activar">
               <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Estatus</th>
@@ -58,8 +64,8 @@
                 </button>
               </td>
             </ng-container>
-            <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','activar', 'acciones']"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'activar','acciones'];"></tr>
+            <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','puesto','activar', 'acciones']"></tr>
+            <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'puesto','activar','acciones'];"></tr>
           </table>
         </div>
         <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
