--- a/src/app/modules/registro/registro.component.html
+++ b/src/app/modules/registro/registro.component.html
@@ -79,7 +79,7 @@
                        <div class="col-sm-6">
                         <p>
                            <mat-form-field appearance="outline" class="inputs_properties">
-                             <mat-label>ID</mat-label>
+                             <mat-label>Clave</mat-label>
                              <input type="number" matInput placeholder="Nombre" autocomplete="off" formControlName="id" step="1" />
                              <mat-error *ngIf="form.get('id')?.hasError('required')">
                                <strong class="txt_msg">**Campo requerido</strong>
