--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -51,8 +51,8 @@
             <th mat-header-cell *matHeaderCellDef >{{ column }}</th>
             <td mat-cell *matCellDef="let prod">
 
-              <ng-container *ngIf="column === 'ID'">
-                {{ prod.ID }}
+              <ng-container *ngIf="column === 'Clave'">
+                {{ prod.estafeta }}
               </ng-container>
   
               <ng-container *ngIf="column === 'Nombre'">
@@ -108,14 +108,12 @@
                   </div>
                 </ng-template>
               </ng-container>  
-
-
               <ng-container *ngIf="column === 'Rol'">
                 <span *ngIf="prod.rol === 'Cliente'; else notCliente">
                   <mat-icon>block</mat-icon>
                 </span>
                 <ng-template #notCliente>
-                  <mat-icon (click)="eliminarUs(prod)">delete</mat-icon>
+                  <mat-icon *ngIf="isAdmin()" (click)="eliminarUs(prod)">delete</mat-icon>
                 </ng-template>
               </ng-container>
               
