--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -60,7 +60,7 @@
               </ng-container>
                                     
               <ng-container *ngIf="column === 'Membresia'">
-              {{ prod.Membresia }}
+              {{ prod.Membresia }}-{{ prod.servicio }}
               </ng-container>
                         
               <ng-container *ngIf="column === 'Precio'">
