--- a/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
+++ b/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
@@ -18,7 +18,7 @@
                       <mat-label for="membresiaSelect">Membresía</mat-label>
                       <mat-select id="membresiaSelect" name="membresiaSelect" [(ngModel)]="membresiaSeleccionada" (ngModelChange)="onMembresiaChange()">
                         <mat-option *ngFor="let membresia of membresias" [value]="membresia.IDmembresia">
-                          {{ membresia.Membresia }}
+                          {{ membresia.Membresia }} -{{ membresia.nombre_servicio}}
                         </mat-option>
                       </mat-select>
                     </mat-form-field>
