--- a/src/app/modules/membresias-lista/membresias.component.html
+++ b/src/app/modules/membresias-lista/membresias.component.html
@@ -37,6 +37,10 @@
                <th mat-header-cell *matHeaderCellDef>Detalles</th>
                <td mat-cell *matCellDef="let item">{{ item.detalles }}</td>
             </ng-container>
+            <ng-container matColumnDef="servicio">
+               <th mat-header-cell *matHeaderCellDef>Servicio</th>
+               <td mat-cell *matCellDef="let item">{{ item.nombre_servicio }}</td>
+            </ng-container>
             <ng-container matColumnDef="price">
                <th mat-header-cell *matHeaderCellDef>Precio</th>
                <td mat-cell *matCellDef="let item">${{ item.precio }}</td>
