--- a/src/app/modules/plan-editar/plan-editar.component.html
+++ b/src/app/modules/plan-editar/plan-editar.component.html
@@ -1,4 +1,4 @@
-
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
             <h1 class="title" mat-dialog-title>Editar Plan</h1>
       
             <form [formGroup]="formulariodePlan" mat-dialog-content>
